add quizGameApp function to app.js

--- a/index.html
+++ b/index.html
@@ -34,27 +34,7 @@
     <link rel="stylesheet" href="./app.css" />
   </head>
   <body>
-    <div id="quiz-game">
-      <section class="">
-        <h1>Quiz Game</h1>
-        <div class="questions">
-          <div class="text-center">
-            <p>
-              <span> </span>
-            </p>
-          </div>
-          <h5 id="question"></h5>
-          <div class="grid-container">
-            <div
-              id="{option.id}"
-              onClick=""
-              class="option"
-              key="{option.id}"
-            ></div>
-          </div>
-        </div>
-      </section>
-    </div>
+    <div id="quiz-game"></div>
     <script src="./app.js"></script>
   </body>
 </html>
